[package]
name = "hdrhistogram"
version = "0.1.0"
authors = [ "Soeren Roerden <soeren@roerden.de>" ]
license = "MIT"
readme = "README.md"
keywords = ["stats", "profiling", "metrics"]
description = "A Rust port of HdrHistogram"
repository = "https://github.org/soro/rusty-hdrhistogram.git"
categories = ["data-structures"]
edition = "2021"

[dependencies]
parking_lot = "0.12"
zlib-rs = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }

[features]
encoding-compression = ["zlib-rs"]
encoding-base64 = ["base64", "encoding-compression"]

[dev-dependencies]
rand = "0.8"
#criterion = { git = "https://github.com/japaric/criterion.rs.git" }
